<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/phoneIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/phoneET"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/yousucc_phone" />

        <com.yousucc.ui.widget.YouSuccEditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/phoneIV"
            android:background="@null"
            android:hint="@string/input_phone_hint"
            android:maxLength="11"
            android:paddingRight="50dp"
            android:text="@string/temp_phone"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/clearPhone"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/phoneET"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/yousucc_clear" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/passIV"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/passET"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/yousucc_passworld" />

        <com.yousucc.ui.widget.YouSuccEditText
            android:id="@+id/passET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/passIV"
            android:background="@null"
            android:hint="@string/input_passworld_hint"
            android:inputType="textPassword"
            android:paddingRight="50dp"
            android:text="123456"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/lookPass"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/passET"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/yousucc_look" />
    </RelativeLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_btn_black"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.yousucc.ui.widget.YouSuccTextView
            android:id="@+id/registeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.yousucc.ui.widget.YouSuccTextView
            android:id="@+id/findPassTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:text="@string/find_pass"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <com.yousucc.ui.widget.YouSuccTextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:text="@string/welcome_yousucc"
        android:textColor="@color/hine_color"
        android:textSize="20sp" />

</LinearLayout>